# cube_core

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  environment_versions.txt  info.md  pyproject.toml  pytest.ini  requirements.txt  任务提交流程问题
cube_encoder/: CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
cube_encoder/docs/: ARCHITECTURE.md  BUG_LOG.md  DOC_WORKFLOW.md  PROJECT_HISTORY.md  README.md  SDK_RELEASE.md
cube_encoder/docs/archive/: 2026-04-19-OSS+Iceberg实施方案.md  README.md  SPARK_COG_LOGICAL_PARTITION_REPORT.md  info.md
cube_encoder/docs/test_reports/: 2026-04-16-data-partition-test-report.md
cube_encoder/grid_core/app/: main.py  perf_smoke.py
cube_encoder/grid_core/sdk/: __init__.py  client.py
cube_encoder/scripts/: build_package.sh
cube_encoder/tests/: test_api.py  test_code_service.py  test_contract_models.py  test_engine_routing.py  test_engine_stability.py  test_error_handler.py  test_geohash_engine.py  test_geometry_utils.py  test_grid_service.py  test_isea4h_cover.py  test_isea4h_engine.py  test_isea4h_fixture_manifest.py  test_isea4h_math.py  test_isea4h_properties.py  test_isea4h_vectors.py  test_mgrs_address.py  test_mgrs_boundary.py  test_mgrs_engine.py  test_mgrs_topology.py  test_perf_smoke.py  test_s2_engine.py  test_sdk.py  test_sdk_integration.py  test_tile_matrix_engine.py
cube_encoder/tests/integration/: test_grid_real_aoi.py
cube_encoder/tools/: generate_isea4h_vectors.py
cube_project/cube_split/: README.md  pyproject.toml  requirements.txt
cube_project/cube_split/docs/: 2026-04-23-剖分入库与AOI读取流程.md  README.md
cube_project/cube_split/scripts/: install_cube_encoder_pkg.sh  run_ray_ingest_e2e.sh  start_ray_worker.sh  stop_ray_cluster.sh
cube_project/cube_split/tests/: test_ray_logical_partition_job.py  test_ray_partition_core.py
cube_project/cube_web/: README.md  pyproject.toml
cube_project/cube_web/cube_web/: app.py
cube_project/cube_web/docs/: README.md
cube_project/cube_web/tests/: test_app.py
cube_split/: README.md  pyproject.toml
cube_split/cube_split/: __init__.py  runtime_config.py  tile_probe.py
cube_split/cube_split/ingest/: carbon_ingest_job.py  managed_output_ingest.py  product_ingest_job.py  ray_ingest_job.py
cube_split/cube_split/jobs/: cancellation.py  carbon_partition_job.py  entity_partition_job.py  product_partition_job.py  ray_logical_partition_job.py  ray_partition_core.py
cube_split/cube_split/partition/: __init__.py  base.py  carbon.py  carbon_products.py  optical.py  optical_products.py  product_products.py  radar.py  radar_products.py  registry.py
cube_split/cube_split/quality/: __init__.py  carbon_quality.py  optical_quality.py  product_quality.py  radar_quality.py
cube_split/cube_split/read/: aoi_reader.py  carbon_query.py
cube_split/cube_split/scripts/: __init__.py  (+2 more)
cube_split/docs/: 2026-04-28-carbon-optical-partition-performance.md  2026-05-07-minio-cluster-readback-guide.md  2026-05-18-partition-metadata-requirements-for-ingest.md  CELL_GEOM_MIGRATION.md  ENTITY_PARTITION_PERFORMANCE.md  LOGICAL_PARTITION_PERFORMANCE.md  PARTITION_OPTIMIZATION_REAL_DATA_TEST_REPORT.md  PARTITION_PERFORMANCE_VALIDATION_MATRIX.md  PLANE_GRID_PARTITION.md  README.md  WORKFLOW.md
cube_split/scripts/: install_cube_encoder_pkg.sh  run_all_partition_flows_smoke.py  run_distributed_partition_test.sh  run_logical_partition_benchmark.py  run_ray_ingest_e2e.sh  start_ray_head.sh
cube_split/tests/: test_aoi_reader.py  test_carbon_ingest_query.py  test_carbon_partition_job.py  test_cell_geom_migration.py  test_entity_coverage.py  test_entity_partition_job.py  test_logical_partition_benchmark_script.py  test_m5_real_acceptance_runner.py  test_managed_output_ingest.py  test_partition_e2e_smoke.py  test_partition_services.py  test_product_workflow.py  test_quality_check.py  test_ray_ingest_job.py  test_ray_logical_partition_job.py  test_ray_partition_core.py  test_runtime_config.py
cube_web/: README.md  pyproject.toml  requirements.txt
cube_web/cube_web/: app.py  schemas.py
cube_web/docs/: ARD_TO_PARTITION_INGEST_QUALITY_WORKFLOW.md  BAND_PRESENTATION_CONTRACT.md  M2_PARTITION_DOMAIN_GATE.md  M6_MOCK_ACCEPTANCE.md  M6_SCENE_DOMAIN_OPERATIONS.md  PARTITION_DATASET_QUALITY_REFACTOR_PLAN.md  PARTITION_GRID_CONTRACT.md  PARTITION_GRID_METHOD_AND_HISTORY.md  PARTITION_INGEST_LOGIC.md  PARTITION_TEST_CLEANUP_GUIDE.md  QUALITY_RULE_CATALOG.md  README.md  SCENE_DOMAIN_OPERATIONS.md  partition-task-orchestration-plan.md
cube_web/frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
cube_web/scripts/: m2_coordination_gate.py  migrate_m6_scene_domain.py  migrate_scene_domain.py  reset_partition_domain.py  run_m1_m3_chained_acceptance.py  run_m2_partition_domain_gate.py  run_m3_quality_publication_gate.py  run_m6_mock_acceptance.py  run_partition_web_api_regression.py  run_real_partition_acceptance.py
cube_web/tests/: test_app.py  test_dataset_api.py  test_dataset_management_api.py  test_formal_runtime.py  test_ingest_api.py  test_ingest_service.py  test_ingest_worker.py  test_m2_coordination_gate.py  test_m6_dataset_management_api.py  test_m6_ingest_api.py  test_m6_ingest_service.py  test_m6_ingest_worker.py  test_m6_mock_integration.py  test_m6_mock_runner.py  test_m6_quality_ingest_bridge.py  test_m6_runtime.py  test_m6_scene_api.py  test_m6_scene_schema.py  test_partition_contracts.py  test_partition_dataset_runner.py  test_partition_dataset_workflow.py  test_partition_defaults.py  test_partition_domain_real.py  test_partition_domain_schema.py  test_partition_domain_store.py  test_partition_entity_coverage.py  test_partition_object_store.py  test_partition_remote_job.py  test_quality_api.py  test_quality_config_store.py  test_quality_contracts.py  test_quality_export.py  test_quality_ingest_bridge.py  test_quality_object_reader.py  test_quality_repository.py  test_quality_repository_opengauss.py  test_quality_repository_real.py  test_quality_retry_failure_catalog.py  test_quality_rules.py  test_quality_worker.py  (+4 more)
demo/: DEMO.md  (+1 more)
(+397 files in other folders)
