[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cube-encoder"
version = "0.2.0"
description = "Core grid encoding SDK and APIs for space-time coding and topology."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "shapely>=2.0.0",
  "mgrs>=1.4.6",
  "h3>=4.4.0",
  "s2sphere>=0.2.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["grid_core*"]
