[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cube-encoder"
version = "0.2.0"
description = "Core grid encoding SDK and APIs for space-time coding and topology."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "eval-type-backport>=0.2.0",
  "shapely>=2.0.0",
  "pyproj>=3.5.0,<3.6.0",
  "mgrs>=1.4.6",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0,<1.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["grid_core*"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = false
