[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cube-split"
version = "0.1.0"
description = "Partition and ingest workflows consuming cube_encoder SDK"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "cube-encoder",
  "rasterio>=1.3.0",
  "pyproj>=3.6.0",
  "ray>=2.10.0,<2.11.0",
  "psycopg[binary]>=3.2.0",
  "minio>=7.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0,<1.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cube_split*"]

[tool.ruff]
line-length = 140
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
check_untyped_defs = false
