[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cube-split"
version = "0.1.0"
description = "Partition and ingest workflows consuming cube_encoder SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cube-encoder",
  "rasterio>=1.4.0",
  "pyproj>=3.5.0,<3.6.0",
  "ray>=2.55.1,<2.56.0",
  "psycopg[binary]>=3.2.0",
  "minio>=7.2.0",
  "numpy>=1.24.0",
  "netCDF4>=1.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0,<1.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cube_split*"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = false
