[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cube-web"
version = "0.1.0"
description = "Standalone web pages for cube visualization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "psycopg[binary]>=3.2.0",
  "cube-encoder",
  "cube-split",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cube_web*"]

[tool.setuptools.package-data]
cube_web = ["web/index.html", "web/assets/*"]
