[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cube-web"
version = "0.1.0"
description = "Standalone web pages for cube visualization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.115.0",
  "eval-type-backport>=0.2.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "cube-encoder",
  "cube-split",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0,<1.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cube_web*"]

[tool.setuptools.package-data]
cube_web = ["web/index.html", "web/assets/*"]

[tool.ruff]
line-length = 140
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
check_untyped_defs = false
